--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
 <li>Ensure your property editor is installed into Umbraco.</li>
 <li>Edit the <code>/App_Plugins/Archetype/js/propertyEditors.views.js</code> file.</li>
 <li>Add a JSON object that defines your custom property editor.</li>
-</ol><h2>
+</ol>
+
+<p>How to use it on a template you ask?:  <a href="https://gist.github.com/kgiszewski/8863822">Get the gist here.</a></p>
+
+<h2>
 <a name="known-issues" class="anchor" href="#known-issues"><span class="octicon octicon-link"></span></a>Known Issues</h2>
 
 <h3>
