Add link to issues.

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <h3>
 <a name="core-property-editors" class="anchor" href="#core-property-editors"><span class="octicon octicon-link"></span></a>Core Property Editors</h3>
 
-<p>RTE - The RTE doesn’t like to render on a repeatable fieldset.  It also goes bonkers when you try to sort a field.</p>
+<p>There is also a list <a href='https://github.com/imulus/Archetype/issues'>here</a>.</p>
       </section>
     </div>
 
