--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <p><a href="http://issues.umbraco.org/issue/U4-2120">http://issues.umbraco.org/issue/U4-2120</a></p>
 
 <h3>
-<a name="core-property-editors" class="anchor" href="#core-property-editors"><span class="octicon octicon-link"></span></a>Core Property Editors</h3>
+<a name="other-issues" class="anchor" href="#other-issues"><span class="octicon octicon-link"></span></a>Other Issues</h3>
 
 <p>There is also a list <a href='https://github.com/imulus/Archetype/issues'>here</a>.</p>
       </section>
