--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+          <img class="logo" src="images/logo.png" alt="logo"/>
           <a id="forkme_banner" href="https://github.com/imulus/Archetype">View on GitHub</a>
 
           <h1 id="project_title">Archetype</h1>
