Add .gitignore to branch and add image

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <p>Archetype is an Umbraco 7 property editor that wraps other installed property editors.  By wrapping the other properties, Archetype allows for custom and repeatable fieldset mashups.</p>
 
 <p>Checkout some videos of Archetype in action here: <a href="http://blog.imulus.com/kevin-giszewski/umbraco-7-package-preview-archetype">http://blog.imulus.com/kevin-giszewski/umbraco-7-package-preview-archetype</a></p>
-
+<img class="logo" style="border: 1px solid #ccc;" src="images/example1.png"/>
 <h2>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
 
-<p>Install the <a href="https://github.com/imulus/Archetype/releases">package</a> through the Umbraco package installer or via <a href="http://www.nuget.org/packages/Archetype/">NuGet</a>.</p>
+<p>Install the latest <a href="https://github.com/imulus/Archetype/releases">package</a> through the Umbraco package installer or via <a href="http://www.nuget.org/packages/Archetype/">NuGet</a>.</p>
 
 <h2>
 <a name="basic-configuration" class="anchor" href="#basic-configuration"><span class="octicon octicon-link"></span></a>Basic Configuration</h2>
